--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,7 +9,7 @@
 .top_header {
   width: 100%;
   height: 80vh;
-  background-image: url(./home_img/header_img.png);
+  background-image: url(../img/header_img.png);
   background-size: cover;
 }
 
